--- a/layouts/partials/matomo.html
+++ b/layouts/partials/matomo.html
@@ -5,6 +5,7 @@
       /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
+      _paq.push(['enableHeartBeatTimer']);
       (function() {
         var u="{{ .url }}";
         _paq.push(['setTrackerUrl', u+'matomo.php']);
